kubernetes/ingress/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maily-ingress
  namespace: maily-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: maily.local
    http:
      paths:
      - path: /contacts
        pathType: Prefix
        backend:
          service:
            name: contact-management-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contact-management-service
            port:
              number: 8000
